src/objects/Quote_Reprice__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <formula>IF(TEXT(Status__c) = &apos;Completed&apos;,&apos;All quotes flagged successfully&apos;,&apos;Flagging failed, Kindly create a new request&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NokiaCPQ_Partner_Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Reprice</relationshipLabel>
        <relationshipName>Quotes_Reprice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Reprice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Partner_Program__c</columns>
        <columns>Price_List__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quote Reprice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes Reprice</pluralLabel>
    <recordTypes>
        <fullName>Price_List</fullName>
        <active>true</active>
        <description>Changes effective on quotes with specific price list</description>
        <label>Price List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Reprice_Partner_Program</fullName>
        <active>true</active>
        <description>Changes effective on quotes with specific partner program</description>
        <label>Partner Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>